# nutritionist_bot

./: main.py  pyproject.toml  requirements.txt  router.py
bot/: loader.py
bot/data/: .env.dist  config.py
bot/handlers/ai/: router.py  services.py
bot/handlers/error/: router.py
bot/handlers/start/: router.py
bot/utils/: router.py  services.py
